--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<div class="image"><img src="images/Phone_Clean.jpeg" alt="" /></div><div class="content">
 						<h2><a href="https://github.com/ShayanChk/Phone_Number_Clean_Up" target="_blank">Phone Number Cleanup Script</a><br />
 						</h2>
-						<p>a Python script written for cleaning up clients' phone numbers.</p>
+						<p>a Python script, written in Jupyter for cleaning up clients' phone numbers.</p>
 					</div>
 				</section>
 			</section>
