--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							<h2>Shayan Chabook</h2>
 							<p>Data Analyst</p>
 							<p>Well versed in Python, Excel, Power BI, SQL</p>
+							<p>test</p>
 								<br />				
 						</div>
 						<a href="#one" class="more scrolly">Projects</a>
