--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<h2>Shayan Chabook</h2>
 							<p>Data Analyst</p>
 							<p>Well versed in Python, Excel, Power BI, SQL</p>
-							<p>test</p>
+							<p><a href="https://shayanchk.github.io/Shayan_Resume.github.io/" target="_blank">Resume</a></p>
 								<br />				
 						</div>
 						<a href="#one" class="more scrolly">Projects</a>
