--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 							<ul class="features">
 								<li class="icon solid fa-envelope">
-									<h3><a href="mailto:Shayan9671@gmail.com"> Shayan9671@gmail.com</a></h3>
+									<h3><a href="mailto:Shayan9671@gmail.com"> Shayan.chbk@gmail.com</a></h3>
 									
 								</li>
 								<li class="icon solid fa-phone">
