--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Bike_Store.jpg" alt="" /></div><div class="content">
-								<h2><a href="https://github.com/ShayanChk/Power-BI-Clean-up-report" target="_blank"> Bike Store Project </a><br />
+								<h2><a href="https://github.com/ShayanChk/Power-BI-Clean-up-report" target="_blank"> Data Migration Project </a><br />
 								</h2>
 								<p>I have used Power BI to illustrate some of our team activities before migration into a new database.</p>
 							</div>
