--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/database.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/database.png" alt="" /></div><div class="content">
 								<h2><a href="https://github.com/ShayanChk/Power-BI-Clean-up-report" target="_blank"> Data Migration Project </a><br />
 								</h2>
 								<p>I have used Power BI to illustrate some of our team activities before migration into a new database.</p>
